--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,8 @@ version=0.1.0-SNAPSHOT
 kotlinVersion=1.1.61
 
 # spring
-#springBootVersion=2.0.0.RELEASE
 springBootVersion=1.5.9.RELEASE
-#springCloudVersion=Finchley.RELEASE
+springCloudVersion=Edgware.RELEASE
 springCloudStreamVersion=Ditmars.RELEASE
 springDependencyManagement=1.0.4.RELEASE
 testcontainersVersion=1.4.3
